# Bastion

./: .clangd  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  DEBUG.MD  DISK.MD  Kernel.Doxyfile  Makefile  README.MD  bastion.cppcheck  build.zig  build.zig.zon  cfgmodules.sh  compile.sh  config.sh  default_modules.lst  diskimg.sh  grub.cfg  i686-elf.cmake  iso.sh  isoorig.sh  kernel.map  limine.conf  modules.csv  nexa.serial  qemu.sh  qemuorig.sh  ramdisk.sh  stacktraceparse.sh  sysroot.sh
kernel/: CMakeLists.txt  Makefile  main.cpp  terminal.cpp  terminal.hpp  vga.cpp  vga.hpp
kernel/arch/i386/: CMakeLists.txt  bits.cpp  boot.S  cursor.cpp  enablePaging.S  gdt.c  gdt.cpp  handlers.cpp  i386-stub.c  inlineasm.cpp  interrupts.cpp  isr.S  keyboard.cpp  keyboard_get_key.cpp  linker.ld  make.config  mutex.cpp  nmi.cpp  page.c  page.cpp  pagedef.h  pic.cpp  pit.cpp  ps2.cpp  reloadsr.S  return_to_prog.S  rtc.cpp  serial.cpp  tty.c  ttycpp.cpp  vga.h
kernel/arch/i386/assembly/: CMakeLists.txt  inlineasm.cpp
kernel/arch/i386/bits/: CMakeLists.txt  bits.cpp
kernel/arch/i386/boot/: CMakeLists.txt  boot.S  crti.S
kernel/arch/i386/defs/: gdtr.h  idt_entry.h  idtr.h  max_addr_size.hpp
kernel/arch/i386/disk/: CMakeLists.txt  atapio.cpp
kernel/arch/i386/drivers/: CMakeLists.txt  cursor.cpp  handlers.cpp  interrupts.cpp  mouse.cpp  nmi.cpp  pic.cpp  pit.cpp  ps2.cpp  rtc.cpp  serial.cpp  ttycpp.cpp  vesa.cpp
kernel/arch/i386/fonts/: CMakeLists.txt  sfn_helper.c  sfn_helper.h
kernel/arch/i386/fs/: CMakeLists.txt  fat32.cpp  itable.cpp  partmanager.cpp
kernel/arch/i386/hal/: CMakeLists.txt  irqcmanager_isr.cpp
kernel/arch/i386/keyboard/: keyboard.cpp  keyboard_get_key.cpp
kernel/arch/i386/memory/: CMakeLists.txt  flush_tss.S  gdt.cpp  mmio.cpp  page.cpp  reloadsr.S
kernel/arch/i386/random/: CMakeLists.txt  rand.cpp
kernel/arch/i386/scheduler/: CMakeLists.txt  context_switch.S  interface.hpp  jump_fn.S  jump_kernelmode.S  jump_usermode.S  switch_to_task.S
kernel/arch/i386/sync/: CMakeLists.txt  mutex.cpp  semaphore.c  semaphore.cpp  spinlock.cpp
kernel/arch/i386/tty/: CMakeLists.txt  tty.cpp  ttyman.cpp
kernel/arch/i386/vector/: CMakeLists.txt  init_sse2.S  sse2.c
kernel/include/distorm/: print_disassemble.h
kernel/include/kernel/: const.hpp  cursor.hpp  gdt.h  gdt.hpp  inlineasm.h  interrupts.hpp  key.hpp  key_event.hpp  keyboard.hpp  mmanager.hpp  mutex.hpp  nmi.hpp  page.h  page.hpp  panic.hpp  pic.hpp  pit.hpp  ps2.hpp  rtc.hpp  serial.hpp  test.hpp  tty.hpp
kernel/include/kernel/assembly/: inlineasm.h
kernel/include/kernel/bits/: bits.hpp
kernel/include/kernel/cpp/: forward.hpp  icxxabi.h  initializer_list.hpp  max.hpp  min.hpp  move.hpp  new.hpp  remove_reference.hpp  stackp.hpp
kernel/include/kernel/datastr/: buffer.hpp  cqueue.hpp  pair.hpp  queue.hpp  sharedptr.hpp  uptr.hpp  vector.hpp
kernel/include/kernel/disk/: atapio.hpp
kernel/include/kernel/drivers/: cursor.hpp  interrupts.hpp  mouse.hpp  nmi.hpp  pic.hpp  pit.hpp  ps2.hpp  rtc.hpp  serial.hpp  vesa.hpp
kernel/include/kernel/fs/: cache.hpp  cacheblock.hpp  const.hpp  fat32.hpp  fs.hpp  itable.hpp  part.hpp  partmanager.hpp  ramustar.hpp
kernel/include/kernel/hal/: device.hpp
kernel/include/kernel/kernel/: const.hpp  log.hpp  mmio.hpp  multibootparser.hpp  stable.h  timeconst.hpp  utility.hpp
kernel/include/kernel/keyboard/: key_event.hpp  keyboard.hpp
kernel/include/kernel/memory/: gdt.hpp  mmanager.hpp  mmio.hpp  page.hpp  tss.hpp
kernel/include/kernel/random/: rand.hpp
kernel/include/kernel/scheduler/: defs.hpp  kernel_task.hpp  mutex.hpp  scheduler.hpp  semaphore.hpp  task.hpp  task_state.hpp  user_task.hpp
kernel/include/kernel/sync/: mutex.hpp  pipe.hpp  rwlock.hpp  semaphore.h  semaphore.hpp  spinlock.hpp
kernel/include/kernel/time/: time.hpp
kernel/include/kernel/tty/: ttyman.hpp
kernel/include/kernel/vector/: sse2.h
kernel/include/kernel/vfs/: filedesc.hpp  inodefactory.hpp  mountpoint.hpp  vfs.hpp
kernel/include/liballoc/: liballoc.h
kernel/include/ssfn/: ssfn.h
kernel/kclib/: Makefile  string.c  string.h
kernel/kclib/src/: string.c
kernel/kernel/: CMakeLists.txt  cpp.cpp  icxxabi.cpp  kernel.cpp  key_event.cpp  liballoc_hooks.cpp  log.cpp  mmanager.cpp  mmio.cpp  multibootparser.cpp  panic.cpp  test.cpp
kernel/kernel/cpp/: CMakeLists.txt  cpp.cpp  stackp.cpp
kernel/kernel/distorm/: CMakeLists.txt  config.h  decoder.c  distorm.c  instructions.c  mnemonics.c  operands.c  prefix.c  print_disassemble.cpp  textdefs.h  wstring.h
kernel/kernel/drivers/: CMakeLists.txt
kernel/kernel/fonts/: CMakeLists.txt  RougeScript-Regular.sfn
kernel/kernel/fs/: CMakeLists.txt  cache.cpp  fat32.cpp  ramustar.cpp
kernel/kernel/hal/: CMakeLists.txt
kernel/kernel/liballoc/: CMakeLists.txt  liballoc.c  liballoc_1.c  liballoc_hooks.cpp  liballoc_old.c
kernel/kernel/scheduler/: CMakeLists.txt  kernel_task.cpp  mutex.cpp  scheduler.cpp  semaphore.cpp  task.cpp  user_task.cpp
kernel/kernel/stable/: CMakeLists.txt  stable.c
kernel/kernel/sync/: CMakeLists.txt  mutex.cpp  pipe.cpp  rwlock.cpp  semaphore.cpp
kernel/kernel/time/: CMakeLists.txt  time.cpp
kernel/kernel/ubsan/: CMakeLists.txt  asanhooks.cpp  asanhooks.hpp  ubsan.cpp
kernel/kernel/vfs/: CMakeLists.txt  vfs.cpp
libc/: CMakeLists.txt  Makefile  error.c
libc/arch/i386/: CMakeLists.txt
libc/ctype/: CMakeLists.txt  ctype.c
libc/include/: assert.h  ctype.h  error.h  idiotpatch.h  setjmp.h  stdio.h  stdlib.h  string.h  time.h
libc/stdio/: CMakeLists.txt  clear.cpp  printf.c  printf.cpp  putchar.cpp
libc/stdlib/: CMakeLists.txt  abort.cpp  rand.cpp  trand.cpp
libc/string/: CMakeLists.txt  ccount.c  memcpar.c  memset.c  memspar.c  rep_movsb_memcpy.c  rfind.c  sse_memcpy.c  sse_memset.c  strcasecmp.c  strcmp.c  strcpy.c  strncpy.c  strstr.c  substr.c
libc/time/: CMakeLists.txt  ssb.cpp  time.cpp
ref/: libs.md
user/: CMakeLists.txt
user/asm/: CMakeLists.txt
user/asm/miniasmtest/: CMakeLists.txt  asm.S
user/c/: CMakeLists.txt
user/c/minictest/: CMakeLists.txt  main.c
(+248 files in other folders)
