add_subdirectory(liballoc)
add_subdirectory(cpp)
add_subdirectory(time)
add_subdirectory(scheduler)
add_subdirectory(sync)
add_subdirectory(hal)
add_subdirectory(fs)
add_subdirectory(drivers)
add_subdirectory(vfs)
add_subdirectory(distorm)
add_subdirectory(stable)

target_sources(kernel_obj PRIVATE kernel.cpp mmanager.cpp panic.cpp test.cpp key_event.cpp log.cpp)